--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <body>
 	<title>Jamie Clark</title>
 	
-	<!-- 	CSS Stuff	-->
+<!-- -----------------------------------------------------CSS Stuff------------------------------------------------------ -->
 	
 	<style>
 		.mainRunner { position: relative; text-align: center; color: white; }
 		.centered { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 		
+		/*
 		.text { text-align: left; } 
 			p { display: inline-block; }
 			a { float: right; }
@@ -14,43 +15,54 @@
 			a { float: right; }
 			a { float: right; }
 			a { float: right; }
-		
+		*/
 		.circular-image { border-radius: 50%; }
+		
 		
 		
 	</style>
 	
-<!-- Menu Bar -->
+<!-- Menu Bar --> <!-- -----------------------------------------color block #1------------------------------------------- -->
 	
 <div style="background-color: #FFFFFF;">   
 	<center>
-	<a href="#reveiws" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
-	<a href="#experience" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Experience</a> 
-	<a href="#projects" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Projects</a> 
-	<a href="#skillstools" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a> 
-	<a href="#top" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a> 
+	<a href="#reveiws" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
+	<a href="#projects" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">Projects</a> 
+	<a href="#experience" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">Experience</a> 
+	<a href="#skillstools" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a> 
+	<a href="#top" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">About Me</a> 
 	</center>
 	<br>
 	<br>
 	<div/>
 
 		
-<!-- Selfies -->
-
+<!-- Selfies --> <!-- ---------------------------------------color block #2----------------------------------------- -->
 <div style="padding:50px; background-color: #E2DFDD;">
-    <img src="IMG_2895.jpg" aligh="right" alt="selfie" width="333.25" height="500" hspace="50"> 
+	
+	<div class="overlay-image">
+		
+
+    <img class="image" src="IMG_2895.jpg" align="right" alt="selfie" width="333.25" height="500" hspace="50"> 
 
 	  
 	
 <!-- Name header -->
+		
+		<!-- header text -->
 
-	<div style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
+	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
 		<h4><strong> I'M JAMIE! </strong></h4>
 		<p> 
 			<em> It's nice to meet you!</em> <br><br> I am a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
 	 </h5> 
 	</div>
+		
+		<!-- division close for overlay-image -->
+			</div>
+		
 	<br>
+	
 	
 	<h2 style="color:white;"> <center>
 	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
@@ -59,18 +71,27 @@
 	<br>
 	<br>
 	
-	
-	
 
 	</div>
-
-<!-- Skills & Tools Section -->
+	
+	
+<!-- Skills & Tools Section --> <!-- ---------------------------------color block #3----------------------------------- -->
 	  
-<div  style="padding: 50px; background-color:#F7EFEC;">
+<div  style="padding: 50px; background-color:#FFFFFF;">
 <h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 	</div>
+	
+	
+	
 
-<!-- Projects -->
+<!-- Experience --> <!-- ----------------------------------------color block #4------------------------------------------ -->
+	
+<div  style="padding: 50px; background-color:#F7EFEC;">
+<h2 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h2>
+	</div>
+	
+
+<!-- Projects --> <!-- -----------------------------------------color block #5------------------------------------------- -->
 	
 <div  style="padding: 50px; background-color:#FFFFFF;">
 <h2 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h2>
@@ -91,14 +112,11 @@
 	 </center> </h5> 
 	
 	</div>
-	 
-<!-- Experience -->
+		
 	
-<div  style="padding: 50px; background-color:#E3D0DA;">
-<h2 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h2>
-	</div>
+	
 	 
-<!-- Reviews (Letters of Recommendation) -->
+<!-- Reviews (Letters of Recommendation) --> <!-- ---------------------------color block #6----------------------------- -->
 	
 	<div  style="padding: 50px; background-color:#FFFFFF;">
 
@@ -199,7 +217,9 @@
 		
 	</div>
 	
-	<!-- Footer -->
+	
+<!-- Footer --> <!-- -------------------------------------------color block #7-------------------------------------------- -->
+	
 <div  style="padding: 50px; background-color:#010000;">	
 	
 		<center>
