--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
 	<title>Jamie Clark</title>
 	
-<!-- -----------------------------------------------------CSS Stuff------------------------------------------------------ -->
+							<!--  CSS Stuff  -->
 	
 	<style>
 		.mainRunner { position: relative; text-align: center; color: white; }
@@ -22,7 +22,7 @@
 		
 	</style>
 	
-<!-- Menu Bar --> <!-- -----------------------------------------color block #1------------------------------------------- -->
+					<!-- Menu Bar --> <!-- color block #1  -->
 	
 <div style="background-color: #FFFFFF;">   
 	<center>
@@ -36,8 +36,10 @@
 	<br>
 	<div/>
 
+	 				<!-- Introduction --> <!--  color block #2  -->
 		
-<!-- Selfies --> <!-- ---------------------------------------color block #2----------------------------------------- -->
+<!-- Selfies -->
+	
 <div style="padding:50px; background-color: #E2DFDD;">
 	
 	<div class="overlay-image">
@@ -75,8 +77,9 @@
 	</div>
 	
 	
-<!-- Skills & Tools Section --> <!-- ---------------------------------color block #3----------------------------------- -->
+				<!-- Skills & Tools Section --> <!--  color block #3  -->
 	  
+	
 <div  style="padding: 50px; background-color:#FFFFFF;">
 <h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 	</div>
@@ -84,14 +87,16 @@
 	
 	
 
-<!-- Experience --> <!-- ----------------------------------------color block #4------------------------------------------ -->
+					<!-- Experience --> <!--  color block #4  -->
+	
 	
 <div  style="padding: 50px; background-color:#F7EFEC;">
 <h2 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h2>
 	</div>
 	
 
-<!-- Projects --> <!-- -----------------------------------------color block #5------------------------------------------- -->
+
+					<!-- Projects --> <!--  color block #5  -->
 	
 <div  style="padding: 50px; background-color:#FFFFFF;">
 <h2 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h2>
@@ -101,10 +106,7 @@
 	 ...this is where I would describe current projects... 
 	 </center> </h5> 
 	
-	<br>
-	<br>
-	<br>
-	<br>
+	<br><br><br><br>
 	
 	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
 	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
@@ -113,12 +115,11 @@
 	
 	</div>
 		
-	
-	
 	 
-<!-- Reviews (Letters of Recommendation) --> <!-- ---------------------------color block #6----------------------------- -->
+			<!-- Reviews (Letters of Recommendation) --> <!--  color block #6  -->
 	
-	<div  style="padding: 50px; background-color:#FFFFFF;">
+	
+	<div  style="padding: 50px; background-color:#E2DFDD;">
 
 
 <h2 id="reviews"> <center> <strong> REVIEWS  </strong> <center> </h2>
@@ -213,12 +214,12 @@
 	</center>
 		
 	</p>
-	
 		
 	</div>
 	
 	
-<!-- Footer --> <!-- -------------------------------------------color block #7-------------------------------------------- -->
+					<!-- Footer --> <!--  color block #7  -->
+	
 	
 <div  style="padding: 50px; background-color:#010000;">	
 	
