--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 	
 <div style="background-color: #FFFFFF;">   
 	<center>
-	<a href="#reveiws" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
-	<a href="#projects" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">Projects</a> 
-	<a href="#experience" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">Experience</a> 
-	<a href="#skillstools" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a> 
-	<a href="#top" style="font-size:18pt; color:black; text-decoration:none; padding-right: 30px;">About Me</a> 
+	<a href="#reveiws" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">Reviews</a>
+	<a href="#projects" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">Projects</a> 
+	<a href="#experience" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">Experience</a> 
+	<a href="#skillstools" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">Skills & Tools</a> 
+	<a href="#top" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">About Me</a> 
 	</center>
 	<br>
-	<br>
+
 	<div/>
 
 	 				<!-- Introduction --> <!--  color block #2  -->
@@ -45,7 +45,7 @@
 	<div class="overlay-image">
 		
 
-    <img class="image" src="IMG_2895.jpg" align="right" alt="selfie" width="333.25" height="500" hspace="50"> 
+    <img class="image" src="IMG_2895.jpg" align="right" alt="selfie" width="333.25" height="500" hspace="50" style="padding right: 50px;"> 
 
 	  
 	
