--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 		*/
 		.circular-image { border-radius: 50%; }
 		
+		.overlay-image { position: relative; width: 100%; }
+		.overlay-image .image { display: block; width: 100%; height: auto; }
+		.overlay-image .text { line-height: 1.5eml text-shadow: 2px 2px 2px #000; text-align: left; position: 
+			absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; }
 		
 		
 	</style>
