--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
 			a { float: right; }
 			a { float: right; }
 			a { float: right; }
-		
+		*/
 		.circular-image { border-radius: 50%; }
 		
+		/*
 		.overlay-image { position: relative; width: 100%; }
 		.overlay-image .image { display: block; width: 100%; height: auto; }
 		.overlay-image .text { line-height: 1.5eml text-shadow: 2px 2px 2px #000; text-align: left; position: 
 			absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; }
 		*/
+		
+		.image-overlay { position: relative; width: 100%; } 
+		.image-overlay .text { position: absolute; top: 200px; left: 0; width: 100%; }
 		
 		
 	</style>
@@ -45,12 +49,9 @@
 		
 <!-- Selfies -->
 	
-<div style="padding:50px; background-color: #E2DFDD;">
-	
-	<div class="overlay-image">
-		
+<div class="image-overlay" style="padding:50px; background-color: #E2DFDD;">		
 
-    <img class="image" src="IMG_2895.jpg" align="right" alt="selfie" width="333.25" height="500" hspace="50" style="padding right: 50px;"> 
+    <img src="IMG_2895.jpg" align="right" alt="selfie" width="333.25" height="500" hspace="50" style="padding right: 50px;"> 
 
 	  
 	
