--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		.circular-image { border-radius: 50%; }
 		
 		.image-overlay { position: relative; width: 100%; } 
-		.image-overlay .text { position: absolute; top: 120px; left: 0; width: 50%; }
+		.image-overlay .text { position: absolute; top: 100px; left: 50px; width: 50%; }
 		
 		
 	</style>
@@ -33,7 +33,8 @@
 		
 <!-- Selfies -->
 	
-<div style="padding:50px; background-color: #E2DFDD;" class="image-overlay">
+	<div class="image-overlay">
+<div style="padding:50px; background-color: #E2DFDD;" >
 
 
     <img src="IMG_2895.jpg" align="right" alt="selfie" width="333.25" height="500" hspace="50" style="padding right: 50px;"> 
