--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 	
 <div style="background-color: #FFFFFF;">   
 	<center>
-	<a href="#reveiws" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">Reviews</a>
-	<a href="#projects" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">Projects</a> 
-	<a href="#experience" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">Experience</a> 
-	<a href="#skillstools" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">Skills & Tools</a> 
-	<a href="#top" style="font-size:12pt; color:black; text-decoration:none; padding-right: 50px;">About Me</a> 
+	<a href="#reveiws" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Reviews</a>
+	<a href="#interests" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Interests</a> 
+	<a href="#projects" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Projects</a> 
+	<a href="#experience" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Experience</a> 
+	<a href="#skillstools" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Skills & Tools</a> 
+	<a href="#top" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">About Me</a> 
 	</center>
 	<br>
 
@@ -106,12 +107,19 @@
 	 </center> </h5> 
 	
 	</div>
+
+	
+					<!-- Interests --> <!--  color block #6  -->
+	
+<div  style="padding: 50px; background-color:#E2DFDD;">
+<h2 id="interests"> <center> <strong> INTERESTS  </strong> <center> </h2>
 		
+	</div>
 	 
-			<!-- Reviews (Letters of Recommendation) --> <!--  color block #6  -->
+			<!-- Reviews (Letters of Recommendation) --> <!--  color block #7  -->
 	
 	
-	<div  style="padding: 50px; background-color:#E2DFDD;">
+	<div  style="padding: 50px; background-color:#FFFFFF;">
 
 
 <h2 id="reviews"> <center> <strong> REVIEWS  </strong> <center> </h2>
@@ -210,7 +218,7 @@
 	</div>
 	
 	
-					<!-- Footer --> <!--  color block #7  -->
+					<!-- Footer --> <!--  color block #8  -->
 	
 	
 <div  style="padding: 50px; background-color:#010000;">	
