--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		* { box-sizing: border-box; }
 		input[type=text], select, textarea { width: 100%; padding: 12px; border: 1px solid #ccc; margin-top:6px;
 			margin-bottom: 16px; resize: vertical; }
-		input[type=submit] { background-color: #4CAF50; color: white; padding: 12px 20px; border: none; 
+		input[type=submit] { background-color: #FFFFFF; color: white; padding: 12px 20px; border: none; 
 			cursor: pointer; }
-		input[type=submit]:hoover { background-color: #45a049; }
-		.container { border-radius: 5px; background-color: #f2f2f2; padding: 10px; }
+		input[type=submit]:hoover { background-color: #FFFFFF; }
+		.container { border-radius: 5px; background-color: #FFFFFF; padding: 10px; }
 		.column { float: left; width: 50%; margin-top: 6px; padding: 20px; }
 		.row:after { content: ""; display: table; clear: both; }
 		@media screen and (max-width: 600px) { .column, input[type=submit] { width: 100%; margin-top: 0; } }
@@ -93,7 +93,7 @@
 	
 	<div class="row">
 		<div class="column">
-			<img src=" " style="width:100%">
+			<img src="sayhello_pic.jpg" style="width:100%">
 		</div>
 		<div class="column">
 			<form action="/action_page.php">
