--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		* { box-sizing: border-box; }
 		input[type=text], select, textarea { width: 100%; padding: 12px; border: 1px solid #ccc; margin-top:6px;
 			margin-bottom: 16px; resize: vertical; }
-		input[type=submit] { background-color: #FFFFFF; color: white; padding: 12px 20px; border: none; 
+		input[type=submit] { background-color: #E6E6E6; color: white; padding: 12px 20px; border: none; 
 			cursor: pointer; }
 		input[type=submit]:hoover { background-color: #FFFFFF; }
 		.container { border-radius: 5px; background-color: #FFFFFF; padding: 10px; }
@@ -97,8 +97,6 @@
 				<input type="text" id="fname" name="firstname" placeholder="Your name..">
 				<label for="lname">Last Name</label>
 				<input type="text" id="lname" name="lastname" placeholder="Your last name..">
-		</div>
-		<div class="column">
 				<label for="jobtitle">Job Title</label>
 				<select id="jobtitle" name="jobtitle">
 					<option value="educator">Educator</option>
@@ -106,6 +104,9 @@
 					<option value="student">Student</option>
 					<option value="other">Other</option>
 				</select>
+		</div>
+		<div class="column">
+				
 				<label for="message">Message</label>
 				<textarea id="message" name="message" placeholder="Write something.." style="height:170px">
 				</textarea>
