--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 		.circular-image { border-radius: 50%; }
 		
+		/*
 		.image-overlay { position: relative; width: 100%; } 
-		.image-overlay .text { position: absolute; top: 100px; left: 50px; width: 50%; }
+		.image-overlay .text { position: absolute; top: 100px; left: 50px; width: 50%; } */
 		
 			/* say hello form */
 		
@@ -26,7 +27,7 @@
 		@media screen and (max-width: 600px) { .column, input[type=submit] { width: 100%; margin-top: 0; } }
 		
 			/* skills & tools percentage circles */
-		
+		/*
 		@import "compass";
 		@import 
 		url('https://fonts.googleapis.com/cssfamily=Titillium+Web:200,200i,300,300i,400,400i,600,600i,700,700i,900');
@@ -73,6 +74,7 @@
 				{ color: $primary-color-span; } } }
 		}
 		}
+		*/
 		
 		
 	</style>
@@ -177,7 +179,7 @@
 	
 <div  style="padding: 50px; background-color:#F7EFEC;">
 	<h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
-		<div class="wrapper">
+		<!-- <div class="wrapper">
 			<div class="c100 p80 tan">
 				<span>Python</span>
 				<div class="slice">
@@ -200,7 +202,7 @@
 				</div>
 			</div>
 		,
-		</div>
+		</div> -->
 
 </div>
 	
