--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<div class="image-overlay">
 
 
-    <img src="IMG_2895.jpg" align="right" alt="selfie" width="333.25" height="500" hspace="50" style="padding right: 50px;"> 
+    <img src="IMG_2895.jpg" align="left" alt="selfie" width="333.25" height="500" hspace="50" style="padding right: 50px;"> 
 
 	  
 	
