--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		@media screen and (max-width: 600px) { .column, input[type=submit] { width: 100%; margin-top: 0; } }
 		
 			/* skills & tools percentage circles */
-		/*
+		
 		@import "compass";
 		@import 
 		url('https://fonts.googleapis.com/cssfamily=Titillium+Web:200,200i,300,300i,400,400i,600,600i,700,700i,900');
@@ -40,7 +40,8 @@
 		$secondary-color: #dfe8ed;
 		$bg-color: #ffffff;
 		
-		$primary-color-tan: #E2DFDD;
+		$primary-color-blue: #E2DFDD;
+		$primary-color-span: #3c4761;
 		
 		.rect-auto { clip: rect(auto, auto, auto, auto); }
 		.pie { position: absolute; border: $circle-width solid $primary-color; width: 1 - (2 * $circle-width);
@@ -74,7 +75,7 @@
 				{ color: $primary-color-span; } } }
 		}
 		}
-		*/
+		
 		
 		
 	</style>
@@ -179,30 +180,30 @@
 	
 <div  style="padding: 50px; background-color:#F7EFEC;">
 	<h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
-		<!-- <div class="wrapper">
-			<div class="c100 p80 tan">
+		<div class="wrapper">
+			<div class="c100 p80 blue">
 				<span>Python</span>
 				<div class="slice">
 					<div class="bar"></div>
 					<div class="fill"></div>
 				</div>
 			</div>
-			<div class="c100 p30 tan">
+			<div class="c100 p30 blue">
 				<span>Java</span>
 				<div class="slice">
 					<div class="bar"></div>
 					<div class="fill"></div>
 				</div>
 			</div>
-			<div class="c100 p10 tan">
+			<div class="c100 p10 blue">
 				<span>c/C++</span>
 				<div class="slice">
 					<div class="bar"></div>
 					<div class="fill"></div>
 				</div>
 			</div>
-		,
-		</div> -->
+		
+		</div> 
 
 </div>
 	
