--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	
 	
 	<h2 style="color:white;"> <center>
-	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
+	Liberty University Class of 2022. <br><em>Computer Science: Cyber Security & Mathematics major.</em>
 		</center> </h2>
 	<br>
 	<br>
