--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 		$circle-width: 0.09em;
 		$circle-width-hover: 0.07em;
 		
-		$primary-color: #000000;
-		$secondary-color: #dfe8ed;
-		$bg-color: #ffffff;
+		$primary-color: black;
+		$secondary-color: silver;
+		$bg-color: white;
 		
-		$primary-color-blue: #E2DFDD;
-		$primary-color-span: #3c4761;
+		$primary-color-blue: maroon;
+		$primary-color-span: gray;
 		
 		.rect-auto { clip: rect(auto, auto, auto, auto); }
 		.pie { position: absolute; border: $circle-width solid $primary-color; width: 1 - (2 * $circle-width);
