--- a/index.html
+++ b/index.html
@@ -133,7 +133,19 @@
 <div  style="padding: 50px; background-color:#F7EFEC;">
 	<h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 
+	<center>
 		
+	<img src="python.jpg" style="width:200px; height:200px" alt="python" hspace="25" class="circular-image"></a>
+	<img src="js.jpg" style="width:200px; height:200px" alt="javascript" hspace="25" class="circular-image"></a><br>
+	
+	<img src="java.jpg" style="width:200px; height:200px" alt="java" hspace="25" class="circular-image"></a> 
+	<img src="css.jpg" style="width:200px; height:200px" alt="css" hspace="25" class="circular-image"></a><br>
+	
+	<img src="c:c++.jpg" style="width:200px; height:200px" alt="c/c++" hspace="25" class="circular-image"></a>
+	<img src="html.jpg" style="width:200px; height:200px" alt="html" hspace="25" class="circular-image"></a><br>
+	
+	
+	</center>
 
 </div>
 	
