--- a/index.html
+++ b/index.html
@@ -136,13 +136,16 @@
 	<center>
 		
 	<img src="python.jpg" style="width:200px; height:180px" alt="python" hspace="50" class="circular-image"></a>
-	<img src="js.jpg" style="width:200px; height:180px" alt="javascript" hspace="50" class="circular-image"></a><br>
+	<img src="js.jpg" style="width:200px; height:180px" alt="javascript" hspace="50" class="circular-image"></a>
+		<br><br><br>
 	
 	<img src="java.jpg" style="width:200px; height:180px" alt="java" hspace="50" class="circular-image"></a> 
-	<img src="css.jpg" style="width:200px; height:180px" alt="css" hspace="50" class="circular-image"></a><br>
+	<img src="css.jpg" style="width:200px; height:180px" alt="css" hspace="50" class="circular-image"></a>
+		<br><br><br>
 	
-	<img src="c:c++.jpg" style="width:200px; height:180px" alt="cc++" hspace="50" class="circular-image"></a>
-	<img src="html.jpg" style="width:200px; height:180px" alt="html" hspace="50" class="circular-image"></a><br>
+	<img src="c++.jpg" style="width:200px; height:180px" alt="cc++" hspace="50" class="circular-image"></a>
+	<img src="html.jpg" style="width:200px; height:180px" alt="html" hspace="50" class="circular-image"></a>
+		<br><br><br>
 	
 	
 	</center>
