--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			margin-bottom: 16px; resize: vertical; }
 		input[type=submit] { background-color: #E6E6E6; color: white; padding: 12px 20px; border: none; 
 			cursor: pointer; }
-		input[type=submit]:hover { background-color: #FFFFFF; }
+		input[type=submit]:hover { background-color: #E6E6E6; }
 		.container { border-radius: 5px; background-color: #FFFFFF; padding: 10px; }
 		.column { float: left; width: 50%; margin-top: 6px; padding: 20px; }
 		.row:after { content: ""; display: table; clear: both; }
