--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 		<!-- header text -->
 
 	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
-		<h4><strong> I'M JAMIE! </strong></h4>
-		<p> 
+		<h4 style="color: white;"><strong> I'M JAMIE! </strong></h4>
+		<p style="color: white;"> 
 			<em> It's nice to meet you!</em> <br><br> I am a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
 	 </h5> 
 	</div>
@@ -77,7 +77,7 @@
 	<br>
 	
 	
-	<h2 style="color:white;"> <center>
+	<h2 style="color: white;"> <center>
 	Liberty University Class of 2022. <br><em>Computer Science: Cyber Security & Mathematics major.</em>
 		</center> </h2>
 	<br>
@@ -94,6 +94,7 @@
 <div class="container">	
 	<div  style="text-align: center">
 		<h2 id="sayhello"> <center> <strong> SAY HELLO! </strong> <center> </h2>
+			<h4 id="welcome"> <center> I would love to connect with you, so drop a message below and I will get back to you shortly! </center> </h4>
 	</div>
 	
 	<div class="row">
@@ -103,7 +104,7 @@
 				<input type="text" id="fname" name="firstname" placeholder="Your name..">
 				<label for="lname">Last Name</label>
 				<input type="text" id="lname" name="lastname" placeholder="Your last name..">
-				<label for="jobtitle">Job Title</label>
+				<label for="jobtitle">Occupation Title</label>
 				<select id="jobtitle" name="jobtitle">
 					<option value="educator">Educator</option>
 					<option value="employer">Employer</option>
