--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<br>
 	
 	
-	<h2 style="color: #808082;"> <center>
+	<h2 style="color: #FFFFFF;"> <center>
 	Liberty University Class of 2022. <br><em>Computer Science: Cyber Security & Mathematics major.</em>
 		</center> </h2>
 	<br>
