--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 	
 <div style="background-color: #365271;">   
 	<center>
-	<a href="#top" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">About Me</a> 
+	<a href="#top" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">About Me</a> 
 	<a href="#skillstools" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Skills & Tools</a> 
-	<a href="#experience" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Experience</a>
-	<a href="#projects" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Projects</a> 
-	<a href="#interests" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Interests</a>
-	<a href="#reveiws" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Reviews</a> 
+	<a href="#experience" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Experience</a>
+	<a href="#projects" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Projects</a> 
+	<a href="#interests" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Interests</a>
+	<a href="#reveiws" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Reviews</a> 
 	</center>
 	<br>
 
@@ -65,8 +65,8 @@
 		<!-- header text -->
 
 	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
-		<h4 style="color: #808082;"><strong> I'M JAMIE! </strong></h4>
-		<p style="color: #808082;"> 
+		<h4 style="color: white;"><strong> I'M JAMIE! </strong></h4>
+		<p style="color: white;"> 
 			<em> It's nice to meet you!</em> <br><br> I am a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
 	 </h5> 
 	</div>
@@ -91,7 +91,7 @@
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
 
-	<img src="discover.jpg" style="width: 500px; height: 200px" alt="discover definition">
+	<center><img src="discover.jpg" style="width: 450px; height: 175px" alt="discover definition"></center>
 		
 	
 </div>	
@@ -100,7 +100,7 @@
 	  
 	
 <div  style="padding: 50px; background-color:#365271;">
-	<h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
+	<h2 id="skillstools" style="color: white;"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 
 	<center>
 		
@@ -126,13 +126,13 @@
 	
 	
 <div  style="padding: 50px; background-color:#FFFFFF;">
-<h2 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h2>
+<h2 id="experience" style="color: #808082;"> <center> <strong> EXPERIENCE  </strong> <center> </h2>
 	</div>
 	
 					<!-- Interests --> <!--  color block #6  -->
 	
 <div  style="padding: 50px; background-color:#87A3BD;">
-<h2 id="interests"> <center> <strong> INTERESTS  </strong> <center> </h2>
+<h2 id="interests" style="color: white;"> <center> <strong> INTERESTS  </strong> <center> </h2>
 		
 	</div>
 	 
@@ -141,17 +141,17 @@
 					<!-- Projects --> <!--  color block #7  -->
 	
 <div  style="padding: 50px; background-color:#FFFFFF;">
-<h2 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h2>
+<h2 id="projects" style="color: #808082;"> <center> <strong> PROJECTS  </strong> <center> </h2>
 	
 	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
-	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
+	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px; color: #808082;"> <center> 
 	 ...this is where I would describe current projects... 
 	 </center> </h5> 
 	
 	<br><br><br><br>
 	
 	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
-	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
+	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px; color: #808082;"> <center> 
 	 ...this is where I would describe current projects... 
 	 </center> </h5> 
 	
@@ -165,10 +165,10 @@
 	<div  style="padding: 50px; background-color:#365271;">
 
 
-<h2 id="reviews"> <center> <strong> REVIEWS  </strong> <center> </h2>
+<h2 id="reviews" style="color: white;"> <center> <strong> REVIEWS  </strong> <center> </h2>
 	
 	<!-- Que's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center> "...Jamie is positive and generous, providing a welcoming attitude to all who meet her. She is a great collaborator who works well with other students, providing leadership, commitment, and passion for everything she does. She is a hard worker, quick learner, and will be an amazing addition to any team..." <center><a href="Jamie Clark letter of rec.pdf">read more</a></center></em><br> - <strong>Que Dang, MPH</strong><br>Director, Student Equity and Success Center<br>Cuesta College, San Luis Obispo</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px; color: white;"> <em><center> "...Jamie is positive and generous, providing a welcoming attitude to all who meet her. She is a great collaborator who works well with other students, providing leadership, commitment, and passion for everything she does. She is a hard worker, quick learner, and will be an amazing addition to any team..." <center><a href="Jamie Clark letter of rec.pdf">read more</a></center></em><br> - <strong>Que Dang, MPH</strong><br>Director, Student Equity and Success Center<br>Cuesta College, San Luis Obispo</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -179,7 +179,7 @@
 		</p>
 	
 	<!-- Alysha's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Whaterver your standard of excellence, Jamie will exceed your expectations. She has an uncanny ability to see ineffeciences and areas in need of improvement, as well as map out comprehensive solutions to resolve them. I appreciate her solution-oriented persepctive and communication syle..."<center><a href="jamies_letter.pdf">read more</a></center><br></em> - <strong>Alysha Nye</strong><br>Academic Success Coach<br>Student Success Center, Statistics Lab</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px; color: white;"> <center><em>"...Whaterver your standard of excellence, Jamie will exceed your expectations. She has an uncanny ability to see ineffeciences and areas in need of improvement, as well as map out comprehensive solutions to resolve them. I appreciate her solution-oriented persepctive and communication syle..."<center><a href="jamies_letter.pdf">read more</a></center><br></em> - <strong>Alysha Nye</strong><br>Academic Success Coach<br>Student Success Center, Statistics Lab</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -191,7 +191,7 @@
   
 
 	<!-- Amanda's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Jamie Clark is the most driven, focused, and hard-working student I have ever had. She is detail oriented, organized, and incredibly responsible. I would trust Jamie with any task in any venue at any time and I know she would go above and beyond to get the job done...Lastly, I think most importantly, Jamie has a huge heart. She cares for others, is kind and respectful of all, and is incredibly thoughtful..."<center><a href="Jamie Clark.pdf">read more</a></center></em><br> - <strong>Amanda Lombard</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px; color: white;"> <center><em>"...Jamie Clark is the most driven, focused, and hard-working student I have ever had. She is detail oriented, organized, and incredibly responsible. I would trust Jamie with any task in any venue at any time and I know she would go above and beyond to get the job done...Lastly, I think most importantly, Jamie has a huge heart. She cares for others, is kind and respectful of all, and is incredibly thoughtful..."<center><a href="Jamie Clark.pdf">read more</a></center></em><br> - <strong>Amanda Lombard</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -203,7 +203,7 @@
 	
 	
 	<!-- Shelby's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Some tutors mean well, but are lacking the actual skill themselves. Not Jamie. The proof is in the pudding, and that particular class that Jamie tutored was my highest achieving PreCalculus course to date. I believe this to be because of Jamie’s help..."<center><a href="JamieCrec.pdf">read more</a></center></em><br> - <strong>Shelby L. Burnett</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px; color: white;"> <em><center>"...Some tutors mean well, but are lacking the actual skill themselves. Not Jamie. The proof is in the pudding, and that particular class that Jamie tutored was my highest achieving PreCalculus course to date. I believe this to be because of Jamie’s help..."<center><a href="JamieCrec.pdf">read more</a></center></em><br> - <strong>Shelby L. Burnett</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -214,7 +214,7 @@
 	</p>
 	
 	<!-- Joe's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie has been a good role model and metor for other tutors. Besides working full time while being a full time student, she is maintain a 3.82 GPA, she is a member of Alpha Gamma Sigma, and she regularly serves in the community..."<center><a href="Jamie_Clark_Letter.pdf">read more</a></center></em><br> - <strong>Joseph C. Vasta, Ph.D.</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px; color: white;"> <em><center>"...Jamie has been a good role model and metor for other tutors. Besides working full time while being a full time student, she is maintain a 3.82 GPA, she is a member of Alpha Gamma Sigma, and she regularly serves in the community..."<center><a href="Jamie_Clark_Letter.pdf">read more</a></center></em><br> - <strong>Joseph C. Vasta, Ph.D.</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -225,7 +225,7 @@
 	</p>
 	
 	<!-- Siboney's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie is responsible, self-motivated and with a great attitude. She demonstrates skills at troubleshooting problems to determine solutions and excels in using available resources on campus..."<center><a href="letterofrec.pdf">read more</a></center></em><br> - <strong>Siboney Guardado</strong><br>Associate Director<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px; color: white;"> <em><center>"...Jamie is responsible, self-motivated and with a great attitude. She demonstrates skills at troubleshooting problems to determine solutions and excels in using available resources on campus..."<center><a href="letterofrec.pdf">read more</a></center></em><br> - <strong>Siboney Guardado</strong><br>Associate Director<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -236,7 +236,7 @@
 	</p>
 	
 	<!-- Anna's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Her ability to balance work and study will no doubt lead Jamie to success wherever she goes. I know she had a profession and, finding herself dissatisfied with her education, choose to pursue her education farther. I have great respect for her forbearance and strength..."<center><a href="JamieClark_LetOfRecWORK.pdf">read more</a></center></em><br> - <strong>Anna Kopcrak</strong><br>Mathematics Department<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px; color: white;"> <em><center>"...Her ability to balance work and study will no doubt lead Jamie to success wherever she goes. I know she had a profession and, finding herself dissatisfied with her education, choose to pursue her education farther. I have great respect for her forbearance and strength..."<center><a href="JamieClark_LetOfRecWORK.pdf">read more</a></center></em><br> - <strong>Anna Kopcrak</strong><br>Mathematics Department<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -247,7 +247,7 @@
 	</p>
 	
 		<!-- Jen's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie stood out from the beginning. She was always prepared and ready to learn. Jamie would often ask questions during class and worked closely with her classmates during open math-lab hours. She consistently put in the time to master the material and performed well on exams. This is particularly impressive as she had been taking a full course load at two different campuses and worked full-time to supplement her educational and living expenses..."<center><a href="Jamie_Clark_Letterofrec.pdf">read more</a></center></em><br> - <strong>Jennifer M. Sanders-Moreno</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px; color: white;"> <em><center>"...Jamie stood out from the beginning. She was always prepared and ready to learn. Jamie would often ask questions during class and worked closely with her classmates during open math-lab hours. She consistently put in the time to master the material and performed well on exams. This is particularly impressive as she had been taking a full course load at two different campuses and worked full-time to supplement her educational and living expenses..."<center><a href="Jamie_Clark_Letterofrec.pdf">read more</a></center></em><br> - <strong>Jennifer M. Sanders-Moreno</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -267,7 +267,7 @@
 
 <div class="container">	
 	<div  style="text-align: center">
-		<h2 id="sayhello"> <center> <strong> SAY HELLO! </strong> <center> </h2>
+		<h2 id="sayhello" style="color: #808082;"> <center> <strong> SAY HELLO! </strong> <center> </h2>
 			<h4 id="welcome"> <center> I would love to connect with you, so drop a message below and I will get back to you shortly! </center> </h4>
 	</div>
 	
