--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div style="background-color: #365271;">   
 	<center>
 	<a href="#top" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">About Me</a> 
-	<a href="#skillstools" style="font-size:12pt; color:black; text-decoration:none; padding-right: 100px;">Skills & Tools</a> 
+	<a href="#skillstools" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Skills & Tools</a> 
 	<a href="#experience" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Experience</a>
 	<a href="#projects" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Projects</a> 
 	<a href="#interests" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Interests</a>
@@ -146,14 +146,14 @@
 	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
 	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px; color: #808082;"> <center> 
 	 ...this is where I would describe current projects... 
-	 </center> </h5> 
+	 </center> </p> 
 	
 	<br><br><br><br>
 	
 	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
 	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px; color: #808082;"> <center> 
 	 ...this is where I would describe current projects... 
-	 </center> </h5> 
+	 </center> </p> 
 	
 	</div>
 
@@ -268,7 +268,7 @@
 <div class="container">	
 	<div  style="text-align: center">
 		<h2 id="sayhello" style="color: #808082;"> <center> <strong> SAY HELLO! </strong> <center> </h2>
-			<h4 id="welcome"> <center> I would love to connect with you, so drop a message below and I will get back to you shortly! </center> </h4>
+			<h4 id="welcome" style="color: #808082;"> <center> I would love to connect with you, so drop a message below and I will get back to you shortly! </center> </h4>
 	</div>
 	
 	<div class="row">
