--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<!-- Skills & Tools Section --> <!--  color block #4  -->
 	  
 	
-<div  style="padding: 50px; background-color:#F4C4B6;">
+<div  style="padding: 50px; background-color:#F4CCBD;">
 	<h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 
 	<center>
@@ -162,7 +162,7 @@
 			<!-- Reviews (Letters of Recommendation) --> <!--  color block #8  -->
 	
 	
-	<div  style="padding: 50px; background-color:#F4C4B6;">
+	<div  style="padding: 50px; background-color:#F4CCBD;">
 
 
 <h2 id="reviews" > <center> <strong> REVIEWS  </strong> <center> </h2>
