--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<br>
 	
 	
-	<h2 style="color: #FFFFFF;"> <center>
+	<h2 style="color: #808082;"> <center>
 	Liberty University Class of 2022. <br><em>Computer Science: Cyber Security & Mathematics major.</em>
 		</center> </h2>
 	<br>
@@ -127,6 +127,54 @@
 	
 <div  style="padding: 50px; background-color:#FFFFFF;">
 <h2 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h2>
+	
+	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color: #F4C4B6; padding: 1em;" align="left">
+		<h4><strong> EDUCATOR </strong></h4><br><br>
+			<h5>Cuesta College Tutor Mentor / May 2015 - May 2019<br> Cuesta College Embedded Tutor/Supplemental Instructor / May 2015 - May 2019 <br> Paul Mitchell the School Santa Barbara Cosmetology & Barbering Instructor / January 2014 - September 2015 <br> </h5>
+		<p> <br><br> ...describe the duties/responsibilities... </p>
+	</div>
+	<br>
+	
+	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color: #F4C4B6; padding: 1em;" align="right">
+		<h4><strong> MANAGEMENT </strong></h4>
+			<h5>Cuesta College Tutor Mentor / May 2015 - May 2019<br> Cuesta College Embedded Tutor/Supplemental Instructor / May 2015 - May 2019 <br> Paul Mitchell the School Santa Barbara Cosmetology & Barbering Instructor / January 2014 - September 2015 <br> </h5>
+		<p>...describe the duties/responsibilities...</p>
+	 </p> 
+	</div>
+	<br>
+	
+	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color: #F4C4B6; padding: 1em;" align="center">
+		<h4><strong> MANAGEMENT </strong></h4>
+			<h5>Cuesta College Tutor Mentor / May 2015 - May 2019<br> Cuesta College Embedded Tutor/Supplemental Instructor / May 2015 - May 2019 <br> Paul Mitchell the School Santa Barbara Cosmetology & Barbering Instructor / January 2014 - September 2015 <br> </h5>
+		<p>...describe the duties/responsibilities...</p>
+	 </p> 
+	</div>
+	<br>
+	
+	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color: #F4C4B6; padding: 1em;" align="left">
+		<h4><strong> EDUCATOR </strong></h4><br><br>
+			<h5>Cuesta College Tutor Mentor / May 2015 - May 2019<br> Cuesta College Embedded Tutor/Supplemental Instructor / May 2015 - May 2019 <br> Paul Mitchell the School Santa Barbara Cosmetology & Barbering Instructor / January 2014 - September 2015 <br> </h5>
+		<p> <br><br> ...describe the duties/responsibilities... </p>
+	</div>
+	<br>
+	
+	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color: #F4C4B6; padding: 1em;" align="right">
+		<h4><strong> MANAGEMENT </strong></h4>
+			<h5>Cuesta College Tutor Mentor / May 2015 - May 2019<br> Cuesta College Embedded Tutor/Supplemental Instructor / May 2015 - May 2019 <br> Paul Mitchell the School Santa Barbara Cosmetology & Barbering Instructor / January 2014 - September 2015 <br> </h5>
+		<p>...describe the duties/responsibilities...</p>
+	 </p> 
+	</div>
+	<br>
+	
+	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color: #F4C4B6; padding: 1em;" align="center">
+		<h4><strong> MANAGEMENT </strong></h4>
+			<h5>Cuesta College Tutor Mentor / May 2015 - May 2019<br> Cuesta College Embedded Tutor/Supplemental Instructor / May 2015 - May 2019 <br> Paul Mitchell the School Santa Barbara Cosmetology & Barbering Instructor / January 2014 - September 2015 <br> </h5>
+		<p>...describe the duties/responsibilities...</p>
+	 </p> 
+	</div>
+	<br>
+	
+	
 	</div>
 	
 					<!-- Interests --> <!--  color block #6  -->
