--- a/index.html
+++ b/index.html
@@ -106,15 +106,16 @@
 		<br><br><br>
 		
 	<img src="python.jpg" style="width:200px; height:180px" alt="python" hspace="50" class="circular-image">
-		<img src="java.jpg" style="width:200px; height:180px" alt="java" hspace="50" class="circular-image"> 
-			<img src="c++.jpg" style="width:200px; height:180px" alt="cc++" hspace="50" class="circular-image">
+	<img src="java.jpg" style="width:200px; height:180px" alt="java" hspace="50" class="circular-image"> 
+	<img src="c++.jpg" style="width:200px; height:180px" alt="cc++" hspace="50" class="circular-image">
+	<img src="web.jpg" style="width:200px; height:180px" alt="web" hspace="50" class="circular-image">
 	
 		<br><br><br>
 		
 	<img src="js.jpg" style="width:200px; height:180px" alt="javascript" hspace="50" class="circular-image">
-		<img src="css.jpg" style="width:200px; height:180px" alt="css" hspace="50" class="circular-image">
-			<img src="html.jpg" style="width:200px; height:180px" alt="html" hspace="50" class="circular-image">
-		
+	<img src="css.jpg" style="width:200px; height:180px" alt="css" hspace="50" class="circular-image">
+	<img src="html.jpg" style="width:200px; height:180px" alt="html" hspace="50" class="circular-image">
+	<img src="javafx.jpg" style="width:200px; height:180px" alt="javafx" hspace="50" class="circular-image">	
 		
 		<br><br><br>
 	</center>
