--- a/index.html
+++ b/index.html
@@ -91,8 +91,16 @@
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
 
-	<center><img src="discover.jpg" style="width: 450px; height: 175px" alt="discover definition"></center>
-		
+	<center>
+		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="discover">
+		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="leadership">
+			<br><br>
+		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="integrity">
+		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="engineer">
+			<br><br>
+		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="creativity">
+		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="detailed">
+
 	
 </div>	
 	
