--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 
 	<center>
 		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="discover">
-		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="leadership">
+		<img src="leadership.jpg" style="width: 450px; height: 175px" hspace="30" alt="leadership">
 			<br><br>
-		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="integrity">
-		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="engineer">
+		<img src="integrity.jpg" style="width: 450px; height: 175px" hspace="30" alt="integrity">
+		<img src="engineer.jpg" style="width: 450px; height: 175px" hspace="30" alt="engineer">
 			<br><br>
-		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="creativity">
-		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="detailed">
+		<img src="creativity.jpg" style="width: 450px; height: 175px" hspace="30" alt="creativity">
+		<img src="detailed.jpg" style="width: 450px; height: 175px" hspace="30" alt="detailed">
 
 	
 </div>	
