--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
 
 	<center>
-		<img src="discover.jpg" style="width: 450px; height: 175px" hspace="30" alt="discover">
+		<img src="discover.jpg" style="width: 450px; height: 175px border: 5px gray;" hspace="30" alt="discover">
 		<img src="leadership.jpg" style="width: 450px; height: 175px" hspace="30" alt="leadership">
 			<br><br>
 		<img src="integrity.jpg" style="width: 450px; height: 175px" hspace="30" alt="integrity">
