--- a/index.html
+++ b/index.html
@@ -90,16 +90,17 @@
 				<!-- DiscoverDefinition --> <!--  color block #3  -->
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
-
+	<h2 id="skillstools"> <center> <strong> SKILLS </strong> <center> </h2>
 	<center>
-		<img src="discover.jpg" style="width: 450px; height: 175px border: 5px gray;" hspace="30" alt="discover">
-		<img src="leadership.jpg" style="width: 450px; height: 175px" hspace="30" alt="leadership">
-			<br><br>
-		<img src="integrity.jpg" style="width: 450px; height: 175px" hspace="30" alt="integrity">
-		<img src="engineer.jpg" style="width: 450px; height: 175px" hspace="30" alt="engineer">
-			<br><br>
-		<img src="creativity.jpg" style="width: 450px; height: 175px" hspace="30" alt="creativity">
-		<img src="detailed.jpg" style="width: 450px; height: 175px" hspace="30" alt="detailed">
+		<img src="discover.jpg" style="width: 350px; height: 100px border: 5px gray;" hspace="30" alt="discover">
+		<img src="leadership.jpg" style="width: 350px; height: 100px" hspace="30" alt="leadership">
+			<br>
+		<img src="integrity.jpg" style="width: 350px; height: 100px" hspace="30" alt="integrity">
+			<br>
+		<img src="engineer.jpg" style="width: 350px; height: 100px" hspace="30" alt="engineer">
+		<img src="creativity.jpg" style="width: 350px; height: 100px" hspace="30" alt="creativity">
+			<br>
+		<img src="detailed.jpg" style="width: 350px; height: 100px" hspace="30" alt="detailed">
 
 	
 </div>	
@@ -108,7 +109,7 @@
 	  
 	
 <div  style="padding: 50px; background-color:#F4CCBD;">
-	<h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
+	<h2 id="skillstools"> <center> <strong> TOOLS </strong> <center> </h2>
 
 	<center>
 		<br><br><br>
