--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
 <div style="background-color: #808082;">   
 	<center>
 	<a href="#top" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">About Me</a> 
-	<a href="#skillstools" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Skills & Tools</a> 
+	<a href="#skills" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Skills</a> 
+	<a href="#tools" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Tools</a> 
 	<a href="#experience" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Experience</a>
-	<a href="#projects" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Projects</a> 
 	<a href="#interests" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Interests</a>
+	<a href="#projects" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Projects</a> 
 	<a href="#reveiws" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Reviews</a> 
+	<a href="#hey" style="font-size:12pt; color:white; text-decoration:none; padding-right: 100px;">Say Hello!</a> 
+
 	</center>
 	<br>
 
@@ -90,7 +93,7 @@
 				<!-- DiscoverDefinition --> <!--  color block #3  -->
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
-	<h2 id="skillstools"> <center> <strong> SKILLS </strong> <center> </h2>
+	<h2 id="skills"> <center> <strong> SKILLS </strong> <center> </h2><br><br>
 	<center>
 		<img src="discover.jpg" style="width: 350px; height: 150px border: 5px gray;" hspace="30" alt="discover">
 		<img src="leadership.jpg" style="width: 350px; height: 150px" hspace="30" alt="leadership">
@@ -109,7 +112,7 @@
 	  
 	
 <div  style="padding: 50px; background-color:#F4CCBD;">
-	<h2 id="skillstools"> <center> <strong> TOOLS </strong> <center> </h2>
+	<h2 id="tools"> <center> <strong> TOOLS </strong> <center> </h2>
 
 	<center>
 		<br><br><br>
@@ -304,7 +307,7 @@
 
 <div class="container">	
 	<div  style="text-align: center">
-		<h2 id="sayhello"> <center> <strong> SAY HELLO! </strong> <center> </h2>
+		<h2 id="hey" id="sayhello"> <center> <strong> SAY HELLO! </strong> <center> </h2>
 			<h4 id="welcome"> <center> I would love to connect with you, so drop a message below and I will get back to you shortly! </center> </h4>
 	</div>
 	
