--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 		.circular-image { border-radius: 50%; }
 		
+			/* skills horizontal line */
+		
+		hr { display: block; margin-top: 0.5em; margin-bottom: 0.5em; margin-left:auto; margin-right:auto; 
+			border-style: inset; border-width: 5px; border-color: #F4C4B6 }
+		
 		/*
 		.image-overlay { position: relative; width: 100%; } 
 		.image-overlay .text { position: absolute; top: 100px; left: 50px; width: 50%; } */
@@ -114,7 +119,10 @@
 	
 <div  style="padding: 50px; background-color:#F4CCBD;">
 	<h2 id="tools"> <center> <strong> TOOLS </strong> <center> </h2>
-
+		
+		<br><br>
+		
+		<hr>
 	<center>
 		<br><br><br>
 		
