--- a/index.html
+++ b/index.html
@@ -96,12 +96,14 @@
 
 	</div>
 
-				<!-- DiscoverDefinition --> <!--  color block #3  -->
+				<!-- Skills Section --> <!--  color block #3  -->
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
-	<h2 id="skills"> <center> <strong> SKILLS </strong> <center> </h2><br><br>
+	<h2 id="skills"> <center> <strong> SKILLS </strong> <center> </h2><br>
 		
 		<hr>
+		<br>
+		<br>
 	<center>
 		<img src="discover.jpg" style="width: 350px; height: 150px border: 5px gray;" hspace="30" alt="discover">
 		<img src="leadership.jpg" style="width: 350px; height: 150px" hspace="30" alt="leadership">
@@ -116,7 +118,7 @@
 	
 </div>	
 	
-				<!-- Skills & Tools Section --> <!--  color block #4  -->
+				<!-- Tools Section --> <!--  color block #4  -->
 	  
 	
 <div  style="padding: 50px; background-color:#F4CCBD;">
