--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		
 			/* skills horizontal line */
 		
-		hr { display: block; margin-top: 0.5em; margin-bottom: 0.5em; margin-left:auto; margin-right:auto; 
-			border-style: inset; border-width: 5px; border-color: #F4C4B6 }
+		/*hr { display: block; margin-top: 0.5em; margin-bottom: 0.5em; margin-left:auto; margin-right:auto; 
+			border-style: inset; border-width: 5px; border-color: #F4C4B6 }*/
 		
 		/*
 		.image-overlay { position: relative; width: 100%; } 
@@ -99,11 +99,8 @@
 				<!-- Skills Section --> <!--  color block #3  -->
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
-	<h2 id="skills"> <center> <strong> SKILLS </strong> <center> </h2><br>
-		
-		<hr>
-		<br>
-		<br>
+	<h2 id="skills"> <center> <strong> SKILLS </strong> <center> </h2>
+		<br><br><br>
 	<center>
 		<img src="discover.jpg" style="width: 350px; height: 150px border: 5px gray;" hspace="30" alt="discover">
 		<img src="leadership.jpg" style="width: 350px; height: 150px" hspace="30" alt="leadership">
