--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<!-- Skills Section --> <!--  color block #3  -->
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
-	<h2 id="skills"> <center> <strong> SKILLS </strong> <center> </h2>
+	<!-- <h2 id="skills"> <center> <strong> SKILLS </strong> <center> </h2>
 		<br><br><br>
 	<center>
 		<img src="discover.jpg" style="width: 350px; height: 150px border: 5px gray;" hspace="30" alt="discover">
@@ -111,7 +111,10 @@
 		<img src="creativity.jpg" style="width: 350px; height: 150px" hspace="30" alt="creativity">
 			<br>
 		<img src="detailed.jpg" style="width: 350px; height: 150px" hspace="30" alt="detailed">
-
+-->
+		<h2 style="color: #808082;"> <center>
+	Liberty University Class of 2022. <br><em>Computer Science: Cyber Security & Mathematics major.</em>
+		</center> </h2><br><br><br>
 	
 </div>	
 	
